--- a/index.html
+++ b/index.html
@@ -45,14 +45,7 @@
     });
     function step1 () {
       // Get audio/video stream
-      navigator.getUserMedia({audio: false, video: {
-   	mandatory: {
-       	chromeMediaSource: 'screen',
-       	maxWidth: 1280,
-       	maxHeight: 720
-   	},
-   	optional: []
-	} }, function(stream){
+      navigator.getUserMedia({audio: true, video: true}, function(stream){
         // Set your video displays
         $('#my-video').prop('src', URL.createObjectURL(stream));
         window.localStream = stream;
@@ -83,7 +76,7 @@
       //Code for screen share
 <head>
 	<title>Screen sharing example</title>
-	<script src="https://code.jquery.com/jquery-1.10.1.min.js "></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 </head>
 <body>
 	<p align="center"><input type="button" id="share_screen" value="Share screen"/></p>
